--- a/environment.yml
+++ b/environment.yml
@@ -1,119 +1,201 @@
 name: datomico
 channels:
-  - anaconda
+  - pytorch
+  - conda-forge
+  - featuretools
   - defaults
 dependencies:
-  - backcall=0.1.0=py37_0
-  - decorator=4.3.0=py37_0
-  - ipython=6.5.0=py37_0
-  - ipython_genutils=0.2.0=py37_0
-  - jedi=0.12.1=py37_0
-  - jupyter_client=5.2.3=py37_0
-  - jupyter_core=4.4.0=py37_0
-  - libsodium=1.0.16=h1bed415_0
-  - parso=0.3.1=py37_0
-  - pexpect=4.6.0=py37_0
-  - pickleshare=0.7.4=py37_0
-  - prompt_toolkit=1.0.15=py37_0
-  - ptyprocess=0.6.0=py37_0
-  - pygments=2.2.0=py37_0
-  - pyzmq=17.1.2=py37h14c3975_0
-  - simplegeneric=0.8.1=py37_2
-  - traitlets=4.3.2=py37_0
-  - wcwidth=0.1.7=py37_0
-  - zeromq=4.2.5=hf484d3e_0
-  - appdirs=1.4.3=py37h28b3542_0
-  - asn1crypto=0.24.0=py37_0
-  - attrs=18.1.0=py37_0
-  - automat=0.7.0=py37_0
+  - arrow-cpp=0.10.0=py36h70250a7_0
+  - boost-cpp=1.67.0=h3a22d5f_0
+  - bzip2=1.0.6=h470a237_2
+  - ca-certificates=2018.8.24=ha4d7672_0
+  - certifi=2018.8.24=py36_1
+  - cycler=0.10.0=py_1
+  - expat=2.2.5=hfc679d8_1
+  - feather-format=0.4.0=py36_2
+  - fontconfig=2.13.0=h65d0f4c_5
+  - icu=58.2=hfc679d8_0
+  - libiconv=1.15=h470a237_2
+  - libuuid=2.32.1=h470a237_0
+  - libxcb=1.13=h470a237_2
+  - libxml2=2.9.8=h422b904_3
+  - openssl=1.0.2p=h470a237_0
+  - parquet-cpp=1.5.0.pre=h83d4a3d_0
+  - pthread-stubs=0.4=h470a237_1
+  - pyarrow=0.10.0=py36hfc679d8_0
+  - pyparsing=2.2.0=py_1
+  - python-dateutil=2.7.3=py_0
+  - pytz=2018.5=py_0
+  - tk=8.6.8=0
+  - xorg-libxau=1.0.8=h470a237_6
+  - xorg-libxdmcp=1.1.2=h470a237_7
+  - appdirs=1.4.3=py36h28b3542_0
+  - asn1crypto=0.24.0=py36_0
+  - attrs=18.1.0=py36_0
+  - automat=0.7.0=py36_0
+  - backcall=0.1.0=py36_0
   - blas=1.0=mkl
-  - bleach=2.1.3=py37_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.8.13=py37_0
-  - cffi=1.11.5=py37h9745a5d_0
-  - constantly=15.1.0=py37h28b3542_0
-  - cryptography=2.3=py37hb7f436b_0
-  - cryptography-vectors=2.3=py37_0
-  - cycler=0.10.0=py37_0
+  - bleach=2.1.4=py36_0
+  - bokeh=0.13.0=py36_0
+  - boto3=1.8.2=py36_0
+  - botocore=1.11.2=py36_0
+  - cffi=1.11.5=py36he75722e_1
+  - click=6.7=py36_0
+  - cloudpickle=0.5.5=py36_0
+  - constantly=15.1.0=py36h28b3542_0
+  - cryptography=2.3.1=py36hc365091_0
+  - cudatoolkit=9.0=h13b8566_0
+  - cudnn=7.1.2=cuda9.0_0
+  - cytoolz=0.9.0.1=py36h14c3975_1
+  - dask=0.19.0=py36_0
+  - dask-core=0.19.0=py36_0
   - dbus=1.13.2=h714fa37_1
-  - entrypoints=0.2.3=py37_2
-  - expat=2.2.5=he0dffb1_0
-  - fontconfig=2.13.0=h9420a91_0
+  - decorator=4.3.0=py36_0
+  - distributed=1.23.0=py36_0
+  - docutils=0.14=py36_0
+  - entrypoints=0.2.3=py36_2
   - freetype=2.9.1=h8a8886c_0
+  - future=0.16.0=py36_0
   - glib=2.56.1=h000015b_0
   - gmp=6.1.2=h6c8ec71_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
-  - html5lib=1.0.1=py37_0
-  - hyperlink=18.0.0=py37_0
-  - icu=58.2=h9c2bf20_1
-  - idna=2.7=py37_0
-  - incremental=17.5.0=py37_0
+  - heapdict=1.0.0=py36_2
+  - html5lib=1.0.1=py36_0
+  - hyperlink=18.0.0=py36_0
+  - idna=2.7=py36_0
+  - incremental=17.5.0=py36_0
   - intel-openmp=2018.0.3=0
-  - ipykernel=4.8.2=py37_0
-  - ipywidgets=7.4.0=py37_0
-  - jinja2=2.10=py37_0
+  - ipykernel=4.8.2=py36_0
+  - ipython=6.5.0=py36_0
+  - ipython_genutils=0.2.0=py36_0
+  - ipywidgets=7.4.0=py36h28b3542_0
+  - jedi=0.12.1=py36_0
+  - jinja2=2.10=py36_0
+  - jmespath=0.9.3=py36_0
   - jpeg=9b=h024ee3a_2
-  - jsonschema=2.6.0=py37_0
-  - jupyter=1.0.0=py37_5
-  - jupyter_console=5.2.0=py37_1
-  - kiwisolver=1.0.1=py37hf484d3e_0
+  - jsonschema=2.6.0=py36_0
+  - jupyter=1.0.0=py36_4
+  - jupyter_client=5.2.3=py36_0
+  - jupyter_console=5.2.0=py36_1
+  - jupyter_core=4.4.0=py36_0
+  - kiwisolver=1.0.1=py36hf484d3e_0
   - libedit=3.1.20170329=h6b74fdf_2
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=8.2.0=hdf63c60_1
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.34=hb9fc6fc_0
+  - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=h26e45fe_1
-  - markupsafe=1.0=py37h14c3975_1
-  - matplotlib=2.2.3=py37hb69df0a_0
-  - mistune=0.8.3=py37h14c3975_1
+  - libtiff=4.0.9=he85c1e1_2
+  - locket=0.2.0=py36_1
+  - markupsafe=1.0=py36h14c3975_1
+  - matplotlib=2.2.2=py36hb69df0a_2
+  - mistune=0.8.3=py36h14c3975_1
   - mkl=2018.0.3=1
-  - mkl_fft=1.0.4=py37h4414c95_1
-  - mkl_random=1.0.1=py37h4414c95_1
-  - nbconvert=5.3.1=py37_0
-  - nbformat=4.4.0=py37_0
+  - mkl_fft=1.0.4=py36h4414c95_1
+  - mkl_random=1.0.1=py36h4414c95_1
+  - msgpack-python=0.5.6=py36h6bb024c_1
+  - nbconvert=5.3.1=py36_0
+  - nbformat=4.4.0=py36_0
+  - nccl=1.3.5=cuda9.0_0
   - ncurses=6.1=hf484d3e_0
-  - notebook=5.6.0=py37_0
-  - numpy=1.15.0=py37h1b885b7_0
-  - numpy-base=1.15.0=py37h3dfced4_0
-  - openssl=1.0.2p=h14c3975_0
-  - pandas=0.23.4=py37h04863e7_0
-  - pandoc=2.2.1=h629c226_0
-  - pandocfilters=1.4.2=py37_1
+  - ninja=1.8.2=py36h6bb024c_1
+  - notebook=5.6.0=py36_0
+  - numpy=1.15.1=py36h1d66e8a_0
+  - numpy-base=1.15.1=py36h81de0dd_0
+  - olefile=0.45.1=py36_0
+  - packaging=17.1=py36_0
+  - pandas=0.23.4=py36h04863e7_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py36_1
+  - parso=0.3.1=py36_0
+  - partd=0.3.8=py36_0
   - pcre=8.42=h439df22_0
-  - pip=10.0.1=py37_0
-  - prometheus_client=0.3.1=py37_0
-  - pyasn1=0.4.4=py37_0
-  - pyasn1-modules=0.2.2=py37_0
-  - pycparser=2.18=py37_1
-  - pyopenssl=18.0.0=py37_0
-  - pyparsing=2.2.0=py37_1
-  - pyqt=5.9.2=py37h22d08a2_0
-  - python=3.7.0=hc3d631a_0
-  - python-dateutil=2.7.3=py37_0
-  - pytz=2018.5=py37_0
-  - qt=5.9.6=h52aff34_0
-  - qtconsole=4.4.0=py37_0
+  - pexpect=4.6.0=py36_0
+  - pickleshare=0.7.4=py36_0
+  - pillow=5.2.0=py36heded4f4_0
+  - pip=10.0.1=py36_0
+  - prometheus_client=0.3.1=py36h28b3542_0
+  - prompt_toolkit=1.0.15=py36_0
+  - psutil=5.4.7=py36h14c3975_0
+  - ptyprocess=0.6.0=py36_0
+  - pyasn1=0.4.4=py36h28b3542_0
+  - pyasn1-modules=0.2.2=py36_0
+  - pycparser=2.18=py36_1
+  - pygments=2.2.0=py36_0
+  - pympler=0.5=py36_0
+  - pyopenssl=18.0.0=py36_0
+  - pyqt=5.6.0=py36h22d08a2_6
+  - pysocks=1.6.8=py36_0
+  - python=3.6.6=hc3d631a_0
+  - pytorch=0.4.1=py36ha74772b_0
+  - pyyaml=3.13=py36h14c3975_0
+  - pyzmq=17.1.2=py36h14c3975_0
+  - qt=5.6.3=h39df351_0
+  - qtconsole=4.3.1=py36_0
   - readline=7.0=ha6073c6_4
-  - send2trash=1.5.0=py37_0
-  - service_identity=17.0.0=py37h28b3542_0
-  - setuptools=40.0.0=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.11.0=py37_1
+  - s3fs=0.1.6=py36_0
+  - s3transfer=0.1.13=py36_0
+  - send2trash=1.5.0=py36_0
+  - service_identity=17.0.0=py36h28b3542_0
+  - setuptools=40.2.0=py36_0
+  - simplegeneric=0.8.1=py36_2
+  - sip=4.18.1=py36hf484d3e_2
+  - six=1.11.0=py36_1
+  - sortedcontainers=2.0.4=py36_0
   - sqlite=3.24.0=h84994c4_0
-  - terminado=0.8.1=py37_1
-  - testpath=0.3.1=py37_0
-  - tk=8.6.7=hc745277_3
-  - tornado=5.1=py37h14c3975_0
-  - twisted=18.7.0=py37h14c3975_1
-  - webencodings=0.5.1=py37_1
-  - wheel=0.31.1=py37_0
-  - widgetsnbextension=3.4.0=py37_0
+  - tblib=1.3.2=py36_0
+  - terminado=0.8.1=py36_1
+  - testpath=0.3.1=py36_0
+  - toolz=0.9.0=py36_0
+  - torchvision=0.2.1=py36_0
+  - tornado=5.1=py36h14c3975_0
+  - tqdm=4.25.0=py36h28b3542_0
+  - traitlets=4.3.2=py36_0
+  - twisted=18.7.0=py36h14c3975_1
+  - urllib3=1.23=py36_0
+  - wcwidth=0.1.7=py36_0
+  - webencodings=0.5.1=py36_1
+  - wheel=0.31.1=py36_0
+  - widgetsnbextension=3.4.0=py36_0
   - xz=5.2.4=h14c3975_4
+  - yaml=0.1.7=had09818_2
+  - zeromq=4.2.5=hf484d3e_1
+  - zict=0.1.3=py36_0
   - zlib=1.2.11=ha838bed_2
-  - zope=1.0=py37_0
-  - zope.interface=4.5.0=py37h14c3975_0
+  - zope=1.0=py36_0
+  - zope.interface=4.5.0=py36h14c3975_0
+  - featuretools=0.3.0=np111py36_33_g58a3bf5
+  - cuda92=1.0=0
+  - pip:
+    - beautifulsoup4==4.6.1
+    - chardet==3.0.4
+    - cliff==2.8.2
+    - cmd2==0.9.3
+    - colorama==0.3.9
+    - configparser==3.5.0
+    - cssselect==1.0.3
+    - geographiclib==1.49
+    - geopy==1.16.0
+    - jupyterlab==0.33.0
+    - jupyterlab-launcher==0.11.2
+    - kaggle-cli==0.12.13
+    - lxml==4.0.0
+    - mechanicalsoup==0.8.0
+    - msgpack==0.5.6
+    - pbr==4.2.0
+    - powerline-status-2.7.dev9999-git.b-616ea816c86828d3a1e846da99a958237108da55==
+    - prettytable==0.7.2
+    - progressbar2==3.34.3
+    - pyperclip==1.6.4
+    - python-utils==2.3.0
+    - requests==2.19.1
+    - reverse-geocoder==1.5.1
+    - robobrowser==0.5.3
+    - scipy==1.1.0
+    - stevedore==1.29.0
+    - torch==0.4.1
+    - werkzeug==0.14.1
+prefix: /home/samuel/anaconda3/envs/datomico
 
