--- a/environment.yml
+++ b/environment.yml
@@ -5,176 +5,27 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appdirs=1.4.3=py36h28b3542_0
-  - arrow-cpp=0.10.0=py36h70250a7_0
-  - asn1crypto=0.24.0=py36_0
-  - attrs=18.1.0=py36_0
-  - automat=0.7.0=py36_0
-  - backcall=0.1.0=py36_0
-  - blas=1.0=mkl
-  - bleach=2.1.4=py36_0
-  - bokeh=0.13.0=py36_0
-  - boost-cpp=1.67.0=h3a22d5f_0
-  - boto3=1.8.2=py36_0
-  - botocore=1.11.2=py36_0
-  - bzip2=1.0.6=h470a237_2
-  - ca-certificates=2018.12.5=0
-  - certifi=2018.11.29=py36_0
-  - cffi=1.11.5=py36he75722e_1
-  - click=6.7=py36_0
-  - cloudpickle=0.5.5=py36_0
-  - constantly=15.1.0=py36h28b3542_0
-  - cryptography=2.4.2=py36h1ba5d50_0
-  - cuda92=1.0=0
-  - cudatoolkit=9.0=h13b8566_0
-  - cudnn=7.1.2=cuda9.0_0
-  - cycler=0.10.0=py_1
-  - cytoolz=0.9.0.1=py36h14c3975_1
-  - dask=0.19.0=py36_0
-  - dask-core=0.19.0=py36_0
-  - dbus=1.13.2=h714fa37_1
-  - decorator=4.3.0=py36_0
-  - distributed=1.23.0=py36_0
-  - docutils=0.14=py36_0
-  - entrypoints=0.2.3=py36_2
-  - expat=2.2.6=he6710b0_0
-  - feather-format=0.4.0=py36_2
-  - featuretools=0.3.0=np111py36_33_g58a3bf5
-  - fontconfig=2.13.0=h65d0f4c_5
-  - freetype=2.9.1=h8a8886c_0
-  - future=0.16.0=py36_0
-  - glib=2.56.2=hd408876_0
-  - gmp=6.1.2=h6c8ec71_1
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - heapdict=1.0.0=py36_2
-  - html5lib=1.0.1=py36_0
-  - hyperlink=18.0.0=py36_0
-  - icu=58.2=hfc679d8_0
-  - idna=2.7=py36_0
-  - incremental=17.5.0=py36_0
-  - intel-openmp=2018.0.3=0
-  - ipykernel=4.8.2=py36_0
-  - ipython=6.5.0=py36_0
-  - ipython_genutils=0.2.0=py36_0
-  - ipywidgets=7.4.0=py36h28b3542_0
-  - jedi=0.12.1=py36_0
-  - jinja2=2.10=py36_0
-  - jmespath=0.9.3=py36_0
-  - jpeg=9b=h024ee3a_2
-  - jsonschema=2.6.0=py36_0
-  - jupyter=1.0.0=py36_4
-  - jupyter_client=5.2.3=py36_0
-  - jupyter_console=5.2.0=py36_1
-  - jupyter_contrib_core=0.3.3=py_2
-  - jupyter_contrib_nbextensions=0.5.1=py36_0
-  - jupyter_core=4.4.0=py36_0
-  - jupyter_highlight_selected_word=0.2.0=py36_1000
-  - jupyter_latex_envs=1.4.4=py36_1000
-  - jupyter_nbextensions_configurator=0.4.1=py36_0
-  - kiwisolver=1.0.1=py36hf484d3e_0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libiconv=1.15=h470a237_2
-  - libpng=1.6.36=hbc83047_0
-  - libsodium=1.0.16=h1bed415_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.9=he85c1e1_2
-  - libuuid=2.32.1=h470a237_0
-  - libxcb=1.13=h470a237_2
-  - libxml2=2.9.8=h422b904_3
-  - libxslt=1.1.32=h4785a14_1002
-  - locket=0.2.0=py36_1
-  - lxml=4.3.0=py36h23eabaa_1000
-  - markupsafe=1.0=py36h14c3975_1
-  - matplotlib=2.2.2=py36hb69df0a_2
-  - mistune=0.8.3=py36h14c3975_1
-  - mkl=2018.0.3=1
-  - mkl_fft=1.0.4=py36h4414c95_1
-  - mkl_random=1.0.1=py36h4414c95_1
-  - msgpack-python=0.5.6=py36h6bb024c_1
-  - nbconvert=5.3.1=py36_0
-  - nbformat=4.4.0=py36_0
-  - nccl=1.3.5=cuda9.0_0
-  - ncurses=6.1=hf484d3e_0
-  - ninja=1.8.2=py36h6bb024c_1
-  - notebook=5.6.0=py36_0
-  - numpy=1.15.1=py36h1d66e8a_0
-  - numpy-base=1.15.1=py36h81de0dd_0
-  - olefile=0.45.1=py36_0
-  - openssl=1.1.1a=h7b6447c_0
-  - packaging=17.1=py36_0
-  - pandas=0.23.4=py36h04863e7_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py36_1
-  - parquet-cpp=1.5.0.pre=h83d4a3d_0
-  - parso=0.3.1=py36_0
-  - partd=0.3.8=py36_0
-  - pathlib=1.0.1=py36_1
-  - pcre=8.42=h439df22_0
-  - pexpect=4.6.0=py36_0
-  - pickleshare=0.7.4=py36_0
-  - pillow=5.2.0=py36heded4f4_0
+  - bokeh
+  - dask
+  - featuretools
+  - ipykernel
+  - ipython
+  - ipython_genutils
+  - ipywidgets
+  - jupyter
+  - jupyter_contrib_nbextensions
+  - jupyter_core
+  - jupyter_highlight_selected_word
+  - jupyter_latex_envs
+  - jupyter_nbextensions_configurator
+  - matplotlib
+  - numpy
+  - numpy-base
+  - pandas
+  - pathlib
+  - pillow
   - pip=10.0.1=py36_0
-  - prometheus_client=0.3.1=py36h28b3542_0
-  - prompt_toolkit=1.0.15=py36_0
-  - psutil=5.4.7=py36h14c3975_0
-  - pthread-stubs=0.4=h470a237_1
-  - ptyprocess=0.6.0=py36_0
-  - pyarrow=0.10.0=py36hfc679d8_0
-  - pyasn1=0.4.4=py36h28b3542_0
-  - pyasn1-modules=0.2.2=py36_0
-  - pycparser=2.18=py36_1
-  - pygments=2.2.0=py36_0
-  - pympler=0.5=py36_0
-  - pyopenssl=18.0.0=py36_0
-  - pyparsing=2.2.0=py_1
-  - pyqt=5.9.2=py36h05f1152_2
-  - pysocks=1.6.8=py36_0
-  - python=3.6.8=h0371630_0
-  - python-dateutil=2.7.3=py_0
-  - pytorch=0.4.1=py36ha74772b_0
-  - pytz=2018.5=py_0
-  - pyyaml=3.13=py36h14c3975_0
-  - pyzmq=17.1.2=py36h14c3975_0
-  - qt=5.9.7=h5867ecd_1
-  - qtconsole=4.3.1=py36_0
-  - readline=7.0=ha6073c6_4
-  - s3fs=0.1.6=py36_0
-  - s3transfer=0.1.13=py36_0
-  - send2trash=1.5.0=py36_0
-  - service_identity=17.0.0=py36h28b3542_0
-  - setuptools=40.2.0=py36_0
-  - simplegeneric=0.8.1=py36_2
-  - sip=4.19.8=py36hf484d3e_0
-  - six=1.11.0=py36_1
-  - sortedcontainers=2.0.4=py36_0
-  - sqlite=3.26.0=h7b6447c_0
-  - tblib=1.3.2=py36_0
-  - terminado=0.8.1=py36_1
-  - testpath=0.3.1=py36_0
-  - tk=8.6.8=0
-  - toolz=0.9.0=py36_0
-  - torchvision=0.2.1=py36_0
-  - tornado=5.1=py36h14c3975_0
-  - tqdm=4.25.0=py36h28b3542_0
-  - traitlets=4.3.2=py36_0
-  - twisted=18.7.0=py36h14c3975_1
-  - urllib3=1.23=py36_0
-  - wcwidth=0.1.7=py36_0
-  - webencodings=0.5.1=py36_1
-  - wheel=0.31.1=py36_0
-  - widgetsnbextension=3.4.0=py36_0
-  - xorg-libxau=1.0.8=h470a237_6
-  - xorg-libxdmcp=1.1.2=h470a237_7
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zeromq=4.2.5=hf484d3e_1
-  - zict=0.1.3=py36_0
-  - zlib=1.2.11=ha838bed_2
-  - zope=1.0=py36_0
-  - zope.interface=4.5.0=py36h14c3975_0
-prefix: /home/samuel/anaconda3/envs/datomico
-
+  - pyqt
+  - python=3.6.8
+  - tqdm
+  - widgetsnbextension
